# amazon-refund

./: .env.example  .gitignore  DEVELOPMENT_GUIDE.md  PHASE2_DESIGN.md  README.md  pyproject.toml
scripts/: init_db.py  launch_chrome.sh
src/: cli.py  config.py
src/analyzer/: __init__.py  price_drop.py
src/browser/: __init__.py  connection.py  selectors.py  stealth.py
src/collector/: __init__.py  order_scraper.py  parsers.py
src/db/: __init__.py  connection.py  migrations.py  models.py  repository.py
src/llm/: client.py
src/monitor/: __init__.py  price_checker.py  voter.py
src/monitor/extractors/: __init__.py  css_selector.py  jsonld.py  llm.py  regex.py
src/notify/: __init__.py  base.py  ntfy.py  telegram.py
src/refund/: __init__.py  agent.py  chat_driver.py  navigator.py  prompts.py  safety.py  strategy.py
src/utils/: __init__.py  humanize.py  retry.py
tests/: conftest.py  e2e_chat_test.py  test_db.py  test_db_backend.py  test_extractors.py  test_llm_client.py  test_llm_models.py  test_parsers.py  test_price_drop.py  test_prompts.py  test_safety.py  test_selectors.py  test_strategy.py  test_voter.py
tests/e2e/: test_refund_flow.py
tests/fixtures/: order_page.html  product_page.html
